# 
# OSS-7 - An opensource implementation of the DASH7 Alliance Protocol for ultra
# lowpower wireless sensor communication
#
# Copyright 2015 University of Antwerp
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

#Add the linker script to use to the linker flags

SET(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/stm32_flash.ld" CACHE FILEPATH "")

#SET(LINKER_FLAGS "-Xlinker  -Map=.map" CACHE STRING "")

ENABLE_LANGUAGE(ASM)
SET_PROPERTY(SOURCE  startup/startup_stm32f7xx.s PROPERTY LANGUAGE ASM)
INCLUDE_DIRECTORIES(
	inc  
	Drivers/CMSIS/Device/ST/STM32F7xx/Include
	Drivers/CMSIS/ST/STM32F7xx/Include/
    Drivers/CMSIS/Device/ST/STM32F7xx/Include
	Drivers/CMSIS/Include
	Drivers/STM32F7xx_HAL_Driver/Inc
	Drivers/STM32F7xx_HAL_Driver/Inc/Legacy
)

##Export the 'inc' directory globally		    
EXPORT_GLOBAL_INCLUDE_DIRECTORIES(
	inc
	Drivers/CMSIS/ST/STM32F7xx/Include/s
	Drivers/STM32F7xx_HAL_Driver/Inc
    Drivers/CMSIS/Device/ST/STM32F7xx/Include
	Drivers/CMSIS/Include
)

#Please note we include 'inc' here since for complicated cmake reasons directories exported 
#with 'GLOBAL_INCLUDE_DIRECTORIES'from chip directories are not exported to the platform directory
EXPORT_PLATFORM_INCLUDE_DIRECTORIES(
	inc  
	Drivers/CMSIS/ST/STM32F7xx/Include/s
	Drivers/STM32F7xx_HAL_Driver/Inc
    Drivers/CMSIS/Device/ST/STM32F7xx/Include
	Drivers/CMSIS/Include
)

#An object library with name '${CHIP_LIBRARY_NAME}' MUST be generated by th CMakeLists.txt file for every chip
ADD_LIBRARY (${CHIP_LIBRARY_NAME} OBJECT
    startup/startup_stm32f7xx.s
    system/system_stm32f7xx.c
	stm32f7_atomic.c
	stm32f7_system.c
	stm32f7_timer.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_adc.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_adc_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_can.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cec.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cortex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_crc.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_crc_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cryp.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cryp_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dcmi.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dcmi_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dfsdm.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma2d.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dsi.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_eth.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_gpio.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hash.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hash_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hcd.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2s.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_irda.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_iwdg.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_jpeg.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_lptim.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_ltdc.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_ltdc_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_mdios.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_mmc.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_msp_template.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_nand.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_nor.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_qspi.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rng.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rtc.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rtc_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sai.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sai_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sd.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sdram.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smartcard.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smartcard_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smbus.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_spdifrx.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_spi.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sram.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim_ex.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_timebase_rtc_alarm_template.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_timebase_rtc_wakeup_template.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_timebase_tim_template.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_uart.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_usart.c
	Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_wwdg.c
	stm32f7_pins.c
	stm32f7_gpio.c
	stm32f7_spi.c
	stm32f7_uart.c
	stm32f7_mcu.c
	stm32f7_watchdog.c
)
